Fix in-page menu order on tablet and mobile

--- a/src/assets/stylesheets/index.scss
+++ b/src/assets/stylesheets/index.scss
@@ -1454,7 +1454,7 @@ section:focus >,
 /* ============ mobile view ============ */
 
 @media (max-width: 991px) {
-  .navbar-collapse {
+  header .navbar-collapse {
     flex-flow: column-reverse;
   }
   .navbar-main {
